--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,29 @@ if( CCacheExectuable )
   # only used with >=cmake-3.4
   set( CMAKE_C_COMPILER_LAUNCHER   "${CCacheExectuable}" )
   set( CMAKE_CXX_COMPILER_LAUNCHER "${CCacheExectuable}" )
+  if(NOT CMAKE_GENERATOR MATCHES "Xcode" AND (NOT CMAKE_GENERATOR MATCHES "Visual Studio")) # we already post a message when using Xcode or MSVC
+    message(STATUS "Found ccache at ${CCacheExectuable}: using ccache to speed up build process")
+  endif()
+
+  # fix for Visual Studio adapted from https://github.com/ccache/ccache/wiki/MS-Visual-Studio#usage
+  # NOTE: there is an issue with ccache installed from chocolatey
+  # since chocolatey puts a "shim" as opposed to the actual executable in the PATH
+  # the solution is to add the path to the actual ccache executable earlier in the path
+  # e.g. in bash: export PATH=`echo c:/ProgramData/chocolatey/lib/ccache/tools/ccache*`:$PATH
+  if (MSVC)
+    message(STATUS "Found ccache at ${CCacheExectuable}: using ccache with MSVC to speed up build process")
+    file(COPY_FILE
+      ${CCacheExectuable} ${CMAKE_BINARY_DIR}/cl.exe
+      ONLY_IF_DIFFERENT)
+
+    set(CMAKE_VS_GLOBALS
+      "CLToolExe=cl.exe"
+      "CLToolPath=${CMAKE_BINARY_DIR}"
+      "TrackFileAccess=false"
+      "UseMultiToolTask=true"
+      "DebugInformationFormat=OldStyle"
+    )
+  endif()
 endif()
 
 #############################################
