--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -689,7 +689,7 @@ jobs:
       - name: cache ccache
         uses: actions/cache@v3
         with:
-          path: ~/ccache # this is likely used when running ccache 4.6.3 in bash, NOTE may change in 4.7+, see https://github.com/ccache/ccache/issues/1023
+          path: ~/AppData/Local/ccache # updated in ccache 4.7, see https://github.com/ccache/ccache/issues/1023
           key: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.cmake-arch }}-${{ matrix.qt-arch }}-${{ matrix.qt-version }}-${{ steps.current-date.outputs.stamp }}
           restore-keys: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.cmake-arch }}-${{ matrix.qt-arch }}-${{ matrix.qt-version }}-
       - name: install qt using aqtinstall
