--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -254,6 +254,7 @@ jobs:
       MACOSX_DEPLOYMENT_TARGET: '${{ matrix.deployment-target }}'
       CMAKE_OSX_ARCHITECTURES: '${{ matrix.cmake-architectures }}'
       BREW_UNIVERSAL_WORKDIR: ${{ github.workspace }}/brew-universal
+      SKIP_SIGNING: 1 # for brew-install-universal
     steps:
       - uses: actions/checkout@v3
         with:
@@ -301,7 +302,7 @@ jobs:
           # install universal versions of homebrew libraries
           if [[ "${{ matrix.cmake-architectures }}" != "x86_64" ]]; then
               echo "Downloading script for creating universal binaries from homebrew packages"
-              curl -O -J -L https://gist.githubusercontent.com/dyfer/6c83905d4593750105897e51e87ec345/raw/6bf8cb1b152e7e61c7199ff7151b0ea303f7307f/brew-install-universal.sh
+              curl -O -J -L https://gist.githubusercontent.com/dyfer/6c83905d4593750105897e51e87ec345/raw/cb818038b9d0d2fce7b1697b95b671a110c28afa/brew-install-universal.sh
               chmod +x brew-install-universal.sh
               if [[ "${{ matrix.build-libsndfile }}" != "true" ]]; then ./brew-install-universal.sh libsndfile; fi
               if [[ "${{ matrix.build-readline }}" != "true" ]]; then ./brew-install-universal.sh readline; fi
