--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,8 @@ on:
       - 'HelpSource/**'
       - 'sounds/**'
       - '*.md'
+  schedule:
+    - cron:  '0 0 * * 0' # run weekly to refresh cache
 jobs:
   lint:
     runs-on: ubuntu-20.04
