--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -682,7 +682,7 @@ jobs:
 
     if: github.repository_owner == 'supercollider' && github.event_name != 'pull_request' # run in the main repo, but not on pull requests
     needs: [lint, macOS, Windows]
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: 'deploy ${{ matrix.artifact-suffix }} to s3'
     env:
       INSTALL_PATH: ${{ github.workspace }}/build/Install
@@ -755,7 +755,7 @@ jobs:
   deploy_gh:
     if: startsWith(github.ref, 'refs/tags/') # run on tagged commits
     needs: [lint, macOS, Windows]
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: 'deploy release'
     env:
       INSTALL_PATH: ${{ github.workspace }}/Install
